# eload

./: .gitignore  eload.kicad_pcb  eload.kicad_prl  eload.kicad_pro  eload.kicad_sch  eload.kicad_sym  fp-lib-table  interface.kicad_sch  sym-lib-table
.github/workflows/: main.yml
3d/: heatsink.FCStd  heatsink.step
eload.pretty/: XSD1226-362.kicad_mod
firmware/: Cargo.toml  Embed.toml
firmware/.cargo/: config.toml
firmware/.zed/: settings.json
firmware/src/: lib.rs  main.rs
ltspice/: series-pass-regulating.asc  series-pass-regulating.plt
