[package]
name = "eload"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_os = "none")'.dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
nb = "1.1.0"
panic-rtt-target = "0.2.0"
rtt-target = "0.6.2"
stm32f1xx-hal = { version = "0.11.0", features = ["stm32f103", "medium"] }
hd44780-driver = { version = "0.4.0", git = "https://github.com/JohnDoneth/hd44780-driver.git" }

[dependencies]
embedded-hal = "1.0.0"
heapless = "0.9.2"
unwrap-infallible = "1.0.0"
